<resources>
    <string name="server_host">http://20.231.22.208:8080</string>
    <string name="shared_key">shared_prefs</string>
    <string name="logged_email_key">email_key</string>
    <string name="logged_password_key">password_key</string>
    <string name="logged_nombre">nombre_key</string>
    <string name="logged_notication_conn_enable">conn_key</string>
    <string name="locale_lenguage_mx">es_MX</string>
    <string name="app_name">Resilience</string>
    <string name="app_name_short">Resil…</string>
    <string name="input_a_materno">Apellido Materno</string>
    <string name="input_a_paterno">Apellido Paterno</string>
    <string name="input_email">Correo Electrónico</string>
    <string name="input_fecha_naciminento">Fecha de Nacimiento</string>
    <string name="input_name">Nombre</string>
    <string name="input_password">Contraseña</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Registrarse</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="update_info">Actualizar Información</string>
    <string name="update_password">Cambiar contraseña</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="text_date">15 / Agosto / 21</string>
    <string name="text_strategy">Una estrategia</string>
    <string name="text_question">Esto es una pregunta muy preguntona</string>
    <string name="text_psicologia_positiva">Puedes ver el siguiente video para obtener más información:</string>
    <string name="text_video_full_index"><u>Oprime para ver en pantalla completa.</u></string>
    <string name="title_buenos_dias">Buenos días</string>
    <string name="title_history_detections">Histórico de detecciones</string>
    <string name="title_user">Datos Personales</string>
    <string name="title_update_info">Actualizar Información</string>
    <string name="title_questions">Preguntas</string>
    <string name="title_sign_up">Necesitamos saber más de ti</string>
    <string name="title_username">${username}</string>
    <string name="title_f_nacimiento">${fNacimiento}</string>
    <string name="title_correo">${correo}</string>
    <string name="title_det_ultima_semana">${det_ultima_semana}</string>
    <string name="title_det_total">${det_total}</string>
    <string name="title_seccion_positivo">Sección 2: Positivos</string>
    <string name="title_seccion_negativo">Sección 1: Negativos</string>
    <string name="title_fit_ini">Primer Análisis</string>
    <string name="title_change_password">Cambio de contraseña</string>
    <string name="title_update_password">Actualizar Contraseña</string>
    <string name="title_headset_setting">Configuración de Diadema</string>
    <string name="update_forta">Actualizar fortalezas</string>
    <string name="title_sign_up_strengths">Necesitamos saber más de ti, dinos tus fortalezas</string>
    <string name="text_input_strengths">Fortaleza</string>
    <string name="text_strengths_explanation">Las fortalezas son esas capacidades, cualidades, recursos, habilidades innatas, que están en nosotros desde que nacemos, pero que muchas veces la persona no es capaz de ver, no ha aprendido a identificarlas y por ello piensa que no están. Por ejemplo, el compromiso, la organización, el carisma o la curiosidad.</string>
    <string name="btn_expla_stren_leave">Cerrar</string>
    <string name="titulo_noti_explan">¿Fortalezas?</string>
    <string name="title_strategy_breath">Hemos detectado una emoción negativa</string>
    <string name="text_strategy_breath">Haz una pausa, respira y esfuérzate por encontrar cosas buenas a lo que ha ocurrido, pregúntate si estás viento todo el panorama.</string>
    <string name="text_hold">Sosten</string>
    <string name="text_breath_in">Inhale</string>
    <string name="text_breath_out">Exhale</string>
    <string name="text_breath_exercise">Presiona el círculo cuando quieras comenzar</string>
    <string name="text_relax_and_confortable">Relájate y ponte cómodo</string>
    <string name="text_focus_on_breathing">Concéntrate en tu respiración</string>
    <string name="text_cirle_breath">4</string>
    <string name="strategy_breath_done">¡Bien hecho!</string>
    <string name="strategy_breath_almost">Casi terminas</string>
    <string name="title_strategy_strengths">Hemos detectado una emoción negativa</string>
    <string name="text_strategy_strengths">Haz una pausa y respira profundo. Recuerda tus fortalezas y practicalas, lo que estás pasando es temporal y tienes herramientas para superarlo.</string>
    <string name="text_no_info_strategy_stre">No hay información que mostrar.</string>
    <string name="text_btn_tell_me">Dime mis fortalezas</string>
    <string name="title_strategy_phrases">Hemos detectado una emoción negativa</string>
    <string name="text_strategy_phrases">Haz una pausa, respira profundo, lee y escucha lo siguiente.</string>
    <string name="text_no_info_strategy_phr">No hay información que mostrar.</string>
    <string name="text_btn_tell_me_phrases">Dímelas</string>
    <string name="text_strategy_temporal">Haz una pausa y respira profundo, es momento de valorar si esta emoción que experimentaste se está repitiendo y convirtiendo en un malestar para lograr tu bienestar.</string>
    <string name="title_selection_strategy">Selecciona una estrategia</string>
    <string name="headset_tutorial_title">Uso de diadema</string>
    <string name="headset_tutorial_text_first">La diadema tiene tres modos de operación, apagado, encendido o buscando dispositivo nuevo a conectarse.</string>
    <string name="headset_tutorial_text_second">Sí es la primera vez que se vincula la diadema, coloca la diadema en la tercera opción y buscala mediante Bluetooth en tu celular.</string>
    <string name="headset_tutorial_text_third">Cuando ya esté conectada, colocala en tu cabeza como se muestra en el siguiente video.</string>
    <string name="headset_tutorial_text_fourth">No olvides colocar la pinza en la sección de tu oreja.</string>
    <string name="headset_tutorial_text_fifth">Hasta este punto la aplicacion deberia de ser capaz de conectarse a la diadema y poder interactuar con ella.</string>
    <string name="headset_tutorial_btn_continuar">Continuar</string>
    <string name="text_notify_conn">Notificar conexión</string>
    <string name="text_button_clasify">Detectar emoción</string>
    <string name="headset_setting_text_info_headset">Uso de la diadema</string>
    <string name="text_button_conn_sett">Conectar diadema</string>
    <string name="text_button_desconn_sett">Desconectar diadema</string>
    <string name="text_sett_disconn">Diadema Desconectada</string>
    <string name="text_sett_conn">Diadema Conectada</string>
    <string name="text_placeholder_fecha_ini">Fecha inicial</string>
    <string name="text_placeholder_fecha_fin">Fecha final</string>
    <string name="text_switch_history">Listado</string>
    <string name="text_date_no_mayor_ini">La fecha de inicio debe ser anterior a la fecha final</string>
    <string name="text_date_no_mayor_fin">La fecha de final debe ser posterior a la fecha inicial</string>
    <string name="text_line_chart_title">% de emociones negativas con respecto al total</string>
    <string name="text_line_pie_title">Distribución porcentual de las emociones negativas</string>
    <string name="text_no_info_history">No hay información que mostrar, seleccionar otro periodo.</string>
    <string name="text_check_negative">Emociones negativas</string>
    <string name="text_check_positive">Emociones positivas</string>
    <string name="text_non_selected">Debes seleccionar al menos un tipo</string>
    <string name="text_y_line_chart">Porcentaje E.N.</string>
    <string name="text_conn_serv_btn">Configuración</string>
    <string name="text_conn_serv_summary">Diadema</string>
    <string name="text_conn_serv_ctitle">Conexión</string>
    <string name="text_conn_serv_ctext">La diadema no se encuentra conectada</string>
    <string name="text_conn_serv_btitle">Conexión Diadema</string>
    <string name="text_conn_serv_btext">La diadema no está conectada, para una mejor experiencia debes tener la diadema conectada.\n\nPresiona el botón Configuración</string>
    <string name="missing_email">Se requiere de un correo electrónico para continuar</string>
    <string name="missing_password">Se requiere de una contraseña para continuar</string>
    <string name="missing_name">Se requiere tu nombre para continuar</string>
    <string name="missing_a_paterno">Se requiere tu apellido paterno para continuar</string>
    <string name="missing_a_materno">Se requiere tu apellido materno para continuar</string>
    <string name="missing_f_nacimiento">Se requiere tu fecha de nacimiento para continuar</string>
    <string name="focus_f_nacimiento">Selecciona tu fecha de nacimiento</string>
    <string name="text_empty_strengt">Debes escribir tus fortalezas.</string>
    <string name="text_add_strength">Fortaleza agregada</string>
    <string name="text_add_strength_repeated">La fortaleza ya existe</string>
    <string name="misssing_strengths">Se requiere al menos una fortaleza</string>
    <string name="logged_succed">Se inició sesión exitosamente</string>
    <string name="logged_fail">Los datos son incorrectos, favor de verificar</string>
    <string name="forget_password"><u>Recuperar Contraseña</u></string>
    <string name="title_info_view">Resilience</string>
    <string name="info_view_text_first">Buscamos alertarte cuando estés pasando por una emoción negativa y logres ser consciente de su existencia.</string>
    <string name="info_view_text_second">Al hacerlo continuamente podrás hacer conciencia si las causas de la emoción se están repitiendo.</string>
    <string name="info_view_text_third">Junto con la alerta de la detección te recomendaremos acciones o mensajes con el objetivo de ayudarte a pensar un poco más claro y ser consciente de lo que estás sintiendo.</string>
    <string name="info_view_log_out"><u>Cerrar sesión</u></string>
    <string name="no_neural">No se encontró la red neuronal</string>
    <string name="daily_title">Bitácora de agradecimiento</string>
    <string name="daily_text_first">Recuerda que agradeciendo estamos feliz por existir y por las buenas cosas que nos pasan día a día.</string>
    <string name="daily_placeholder_date_input">Fecha a buscar</string>
    <string name="daily_dialog_text">Fecha a buscar</string>
    <string name="daily_dialog_title">Nuevo agradecimiento</string>
    <string name="daily_dialog_add">Agregar</string>
    <string name="daily_change_dialog_title">Cambiar agradecimiento</string>
    <string name="daily_change_dialog_change">Cambiar</string>
    <string name="component_daily_date_example">Fecha Ejemplo</string>
    <string name="component_daily_gratitude_example">Agradecimiento de ejemplo. Agradecimiento de ejemplo. Agradecimiento de ejemplo. Agradecimiento de ejemplo. Agradecimiento de ejemplo.</string>
    <string name="user_dialog_title">¡¡Cambio de contraseña!!</string>
    <string name="user_dialog_message">¿Deseas empezar el procedimiento para actualizar la contraseña?</string>
    <string name="user_dialog_affirmative">Cambiar contraseña</string>
    <string name="user_dialog_negative">Cancelar</string>
    <string name="update_info_success">Información Actualizada</string>
    <string name="text_update_stre_succed">Fortalezas actualizadas</string>
    <string name="tutorial_headset_title">Tutorial de Entrenamiento</string>
    <string name="train_finished_title">Entrenamiento Completado</string>
    <string name="train_finished_text_first">Felicidades has completado el entrenamiento, en este momento la red neuronal se está entrenando con tu información.</string>
    <string name="train_finished_text_second">Este proceso puede demorar hasta 5 minutos, puedes minimizar la aplicación, se te notificará cuando termine.</string>
    <string name="train_finished_training">Entrenando</string>
</resources>