<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/vertical_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_user"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:text="@string/title_user"
                android:textAppearance="@style/title_blue"/>

            <TextView
                android:id="@+id/title_username"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:text="@string/title_username"
                android:textAppearance="@style/title_blue"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_f_nacimiento"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:text="@string/title_f_nacimiento"
                android:textAppearance="@style/text_gray"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_correo"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:text="@string/title_correo"
                android:textAppearance="@style/text_gray"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_det_ultima_semana"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:text="@string/title_det_ultima_semana"
                android:textAppearance="@style/text_gray"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_det_total"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:text="@string/title_det_total"
                android:textAppearance="@style/text_gray"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/editar_info"
                android:gravity="center"
                android:background="@drawable/background_green"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/update_info"
                android:theme="@style/inside_button"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/cerrar_sesion"
                android:gravity="center"
                android:background="@drawable/background_red"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/log_out"
                android:theme="@style/inside_button"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>