<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/vertical_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_headset_setting"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:text="@string/title_headset_setting"
                android:textAppearance="@style/title_blue" />

            <TextView
                android:id="@+id/title_username"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:text="@string/title_username"
                android:textAppearance="@style/title_blue"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints" />


            <Switch
                android:id="@+id/swt_notify_conn"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/text_notify_conn"
                android:textColor="@color/black"
                android:theme="@style/style_switch"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Button
                android:id="@+id/headset_setting_text_info_headset"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_blue"
                android:gravity="center"
                android:text="@string/headset_setting_text_info_headset"
                android:textColor="@color/black"
                android:theme="@style/inside_button" />

            <Button
                android:id="@+id/conectar"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_green"
                android:gravity="center"
                android:text="@string/text_button_conn_sett"
                android:textColor="@color/black"
                android:theme="@style/inside_button" />

            <Button
                android:id="@+id/desconetar"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_red"
                android:gravity="center"
                android:text="@string/text_button_desconn_sett"
                android:textColor="@color/black"
                android:theme="@style/inside_button" />

            <Button
                android:id="@+id/detectar_emocion"
                style="@style/center_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_yellow"
                android:gravity="center"
                android:text="@string/text_button_clasify"
                android:textColor="@color/black"
                android:theme="@style/inside_button" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>